--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -3,7 +3,6 @@
 
 <head>
   <title>{{ page.title }}</title>
-  <script id="adobe_dtm" src="//www.redhat.com/dtm.js" type="text/javascript"></script>
   <script src="{{ '/assets/javascript/highlightjs-pack.js' | relative_url }}" type="text/javascript"></script>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -20,6 +19,7 @@
   <!-- End Google Tag Manager -->
   <!-- Syntax highlighting -->
   <script>hljs.initHighlightingOnLoad();</script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/list.js/1.5.0/list.min.js"></script>
 </head>
 
 <body class="{% if page.url == '/' %}homepage{% else %}{{page.layout}}{% endif %}">
@@ -44,6 +44,7 @@
         _satellite.pageBottom();
     }
   </script>
+  
 </body>
 
 </html>
