--- a/_layouts/extensions.html
+++ b/_layouts/extensions.html
@@ -2,59 +2,107 @@
 layout: base
 ---
 
+
+
+
 <div class="grid-wrapper extensions-page">
   <div class="grid__item width-12-12">
     <h1 class="text-caps">{{ page.title }}</h1>
   </div>
+
+
   <div class="grid__item width-4-12 width-12-12-m toc">
-    <h2>Categories</h2>
-    <ul>
-    {% for item in site.data.extensions.categories %}
-      <li><a href="#{{ item.cat-id }}">{{ item.category }}</a></li>
-    {% endfor %}
-    </ul>
+    <div id="users">
+      <input class="search" style="color: black" placeholder="Search" onkeypress="bim()"/>
+      <div class="list">
+          {% for extension in site.data.extensions.extensions %}
+  
+          <div  >
+              <a href="#{{ extension.name }}" class="name">{{ extension.name }}<span style="visibility: hidden"  class="tags">{{ extension.tags }}</span><span style="visibility: hidden"  class="category">{{ extension.category }}</span><span style="visibility: hidden"  class="class">{{ extension.class }}</span></a>
+     </div>
+          {% endfor %}   
+      </div>
+    
+    </div>
+
+      <script type="text/javascript">
+
+        var options = {
+          valueNames: [ 'category', 'name', 'tags', 'description', 'groupId', 'module', 'class' ]
+        };
+
+       
+      
+        var userList = new List('users', options);
+
+
+        function bim(){
+       
+       
+
+          var list = document.getElementsByClassName("ext-row");
+          for (var i = 0; i < list.length; i++) {
+            list[i].style.display = "none"
+          }
+          userList.visibleItems.forEach(function(element) {
+            document.getElementById(element._values['class']).style.display = "block"
+          });
+
+          console.log(userList.visibleItems);
+
+         
+        }
+        </script>
+    
+
+ 
+    
   </div>
   <div class="grid__item width-8-12 width-12-12-m">
 <div markdown="1">
 <p>
 Think of Logisland extensions as your project dependencies.
 Extensions configure, boot and integrate a framework or technology into your Logisland application.
-They also do all of the heavy lifting of providing the right information to GraalVM for your application to compile natively.
 </p>
-<p>
-Adding an extension is as easy as adding a dependency or use Logisland tooling.
-</p>
-  <div class="listingblock">
-    <div class="content">
-      <pre class="highlight"><code class="bash">$ mvn logisland:list-extensions
-$ mvn logisland:add-extension -Dextensions="groupId:artifactId"
 
-# Or
-
-$ gradle list-extensions
-# and add the dependency in your dependencies section
-      </code></pre>
-    </div>
-  </div>
 <p>
 Explore the wide breath of technologies Logisland applications can be made with.
 </p>
 </div>
-    {% for item in site.data.extensions.categories %}
-      <h2 id="{{ item.cat-id }}">{{ item.category }}</h2>
-      <ul class="dashed cat-extensions">
-        {% for extension in item.extensions %}
-          <li class="ext-row">
-            <h3>{{ extension.name }}</h3>
-            {% if extension.description %}
-              <p class="description">{{ extension.description }}</p>
-            {% endif %}
-            {% if extension.groupId %}
-              <p class="text-cyan" title="Maven coordinates">{{ extension.groupId }}:{{ extension.artifactId }}</p>
-            {% endif %}
-          </li>
-        {% endfor %}
-      </ul>
-    {% endfor %}
+
+
+      <ul class="dashed cat-extensions"></ul>
+          {% for item in site.data.extensions.categories %}
+
+            <div><hr><h2 id="{{ item }}">{{ item }}</h2>
+              
+                  
+                {% for extension in site.data.extensions.extensions %}
+                {% if item == extension.category %}
+                <div class="ext-row" id="{{ extension.class }}">
+                    <h3 id="{{ extension.name }}" >{{ extension.name }}</h3>
+                    {% if extension.description %}
+                      <p class="description">{{ extension.description }}</p>
+                    {% endif %}
+                    {% if extension.groupId %}
+                      <p class="text-cyan" title="Maven coordinates">{{ extension.groupId }}:{{ extension.artifactId }}</p>
+                    {% endif %}
+                    <ul>
+                      {% if extension.module %}<li class="text-cyan" title="Maven coordinates">{{ extension.module }}</li>{% endif %}
+                      {% if extension.class %} <li>{{ extension.class }}</li>{% endif %}
+                    </ul>
+                    
+                  </div>
+                {% endif %}
+                {% endfor %}
+            
+            </div>
+          {% endfor %}
+          </ul>
+
+     
+   
+
+    
   </div>
 </div>
